<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >
    
    <ImageView 
        android:id="@+id/image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    
    <Button 
        android:id="@+id/buttonClose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/close_label" />
    
    <Button 
        android:id="@+id/imageF1"
        android:layout_toLeftOf="@+id/imageF2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/floor1_label" />
    
    <Button 
        android:id="@+id/imageF2"
        android:layout_toLeftOf="@+id/imageF3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/floor2_label" />
    
    <Button 
        android:id="@+id/imageF3"
        android:layout_alignParentRight="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/floor3_label" />

</RelativeLayout>
