<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    <TextView
        android:id="@+id/webLink"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"  
        android:layout_alignParentBottom="true"
        android:text="@string/web_link"
        android:autoLink="web"
        android:ems="12" ></TextView>
    <TextView
        android:id="@+id/surveyLink"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/webLink"
        android:text="@string/survey_link"
        android:autoLink="web"
        android:ems="12" ></TextView>

        
    <TextView
        android:id="@+id/surveyRequest"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/surveyLink"
        android:text="@string/survey_request"
        android:ems="12" ></TextView>
    
    <TextView
        android:id="@+id/apacheLink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/surveyRequest"
        android:text="@string/apache"
        android:autoLink="web"
        android:textSize="14sp" />

        


    <ImageView
        android:id="@+id/creditsImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/apacheLink"
        android:src="@drawable/credits" />

</RelativeLayout>
